--- a/login.css
+++ b/login.css
@@ -4,8 +4,8 @@
 }
 
 body {
-  background-color: rgba(233, 240, 231, 1);
-  /* background-color: #f5f5f5; */
+ background-image: url("./assets/images/background-img-blur.png");
+ 
 }
 
 .Top {
